--- a/ellipsoid.cabal
+++ b/ellipsoid.cabal
@@ -11,7 +11,7 @@ bug-reports:   http://github.com/jnhnum1/mvee/issues
 build-type:    Simple
 
 Executable carExperiment
-  ghc-options:   -Wall -rtsopts
+  ghc-options:   -Wall -rtsopts -O
   build-depends: transformers,
     mtl,
     hmatrix,
